--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -5,6 +5,7 @@
 	padding: 0;
 	outline: none;
 }
+/* test comment to see how VC in GITHub works */
 /* REQUIRED BUTTON STYLES for reset: */
 button.btn {
 font-family: 'Helvetica Neue', Helvetica, Arial, Sans-Serif;
